--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DicodingSubmissionBFAA">
+        <activity android:name=".ui.activity.userfav.UserFavActivity"></activity>
         <activity android:name=".ui.activity.detail.UserDetailActivity" />
         <activity
             android:name=".ui.activity.main.MainActivity"
