--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DicodingSubmissionBFAA">
-        <activity android:name=".ui.activity.setting.SettingsActivity"></activity>
+        <activity android:name=".ui.activity.settings.SettingsActivity" />
         <activity android:name=".ui.activity.userfav.UserFavActivity" />
         <activity android:name=".ui.activity.detail.UserDetailActivity" />
         <activity
