CREATING READ_DATABASE permission in AndroidManifest.xml for exporting database content provider

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <permission
+        android:name="id.rllyhz.dicodingsubmissionbfaa.READ_DATABASE"
+        android:protectionLevel="normal" />
+
     <application
         android:name=".GithubUserApplication"
         android:allowBackup="true"
