--- a/githubconsumerapp/src/main/AndroidManifest.xml
+++ b/githubconsumerapp/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="id.rllyhz.githubconsumerapp">
 
     <application
+        android:name=".GithubConsumerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
