--- a/githubconsumerapp/src/main/AndroidManifest.xml
+++ b/githubconsumerapp/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.rllyhz.githubconsumerapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="id.rllyhz.dicodingsubmissionbfaa.READ_DATABASE" />
+
     <application
         android:name=".GithubConsumerApplication"
         android:allowBackup="true"
@@ -18,5 +21,9 @@
             </intent-filter>
         </activity>
     </application>
+
+    <queries>
+        <package android:name="id.rllyhz.dicodingsubmissionbfaa" />
+    </queries>
 
 </manifest>
