--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# My Github Token
+github_api_token="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"
