--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         glideVersion = "4.12.0"
         fragmentVersion = "1.3.2"
         swipeRefreshLayoutVersion = "1.1.0"
+        preferenceVersion = "1.1.1"
     }
 
     repositories {
