--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 # My Github Token
-github_api_token="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"
+github_api_token="your token here"
